<?xml version="1.0"?>
<package format="3">
  <name>thinkdet_ros2_demo</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for ThinkDet and GroundingDINO RGB-D object targeting demos.</description>

  <maintainer email="iibrohimm@local">iibrohimm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
